@@ -3,6 +3,16 @@
 	* AssemblyInfo.cs:
 	  
 
+	* Session/Game/Player.cs:
+	  Changed the way that the 'missed' effect of a card is
+	  evaluated so that Elena Fuente can respond with Dodge and
+	  still draw 1 card.
+
+2011-09-29  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
 	* Server.cs:
 	  Unlock server if an exception is thrown in
 	  Bang.Server.Server.CreateSession().
